2005-03-04 13:12  antirez

	* ChangeLog: ChangeLog file added, generated using cvs2cl

2005-03-04 12:54  antirez

	* jim-posix.c, jim-win32.c, jim-win32com.c, jim.c, jim.h: Added
	  JIM_NOTUSED macro. Macro used where appropriate.

2005-03-04 11:47  antirez

	* README, bench.tcl, jim.c, test.tcl: Small README change to
	  reflect LIBS Makefile var.

2005-03-04 11:06  patthoyts

	* Makefile, jim-win32com.c, jim.c, jim.h: Use command line vars in
	  the Makefile.  Make const quiet with gcc -Wwrite-strings Fixed
	  macro usage in COM extension that gcc doesn't like.

2005-03-04 10:45  antirez

	* jim.c, test.tcl: [split] command added + tests.

2005-03-04 09:30  antirez

	* README, doc/Embedder-HOWTO.txt: Embedder-HOWTO added

2005-03-04 09:03  antirez

	* AUTHORS, README, TODO, bench.tcl, jim.h: more benchmarks. Initial
	  size of hashtables modified.	Some documentation change.

2005-03-03 23:10  antirez

	* jim.c, test.tcl: [string map ?-nocase? ...] implemented. tests
	  added.

2005-03-03 17:41  antirez

	* jim.c, jim.h: Missing functions exported

2005-03-03 17:33  antirez

	* jim.c, jim.h: RegisterCoreCommands now exported (broken in the
	  last commit)

2005-03-03 17:24  patthoyts

	* jim-win32com.c: Added preliminary support for using typelibrary
	  information

2005-03-03 16:43  antirez

	* jim.c: interactive prompt output binary safe (using fwrite
	  instead of printf).

2005-03-03 16:36  antirez

	* jim.c: [string repeat] implemented.

2005-03-03 16:30  antirez

	* Makefile, jim.c, jim.h: Made exporting of symbols to the API less
	  error prone with JIM_REGISTER_API and JIM_GET_API macros.

2005-03-03 15:41  antirez

	* Makefile, jim.h: improtant fix! jim error message visualization
	  was broken because Jim_PrintErrorMessage() was not exported using
	  the right funciton pointer.

2005-03-03 14:13  antirez

	* Makefile: Makefile dependences updated

2005-03-03 14:10  antirez

	* jim.c, jim.h: changes to the reference system. Now references