@@ -1,3 +1,8 @@
+2005-03-04 13:15  antirez
+
+	* ChangeLog, Makefile: Added a 'commit' makefile target to generate
+	  ChangeLog + cvs commit.
+
 2005-03-04 13:12  antirez
 
 	* ChangeLog: ChangeLog file added, generated using cvs2cl
